y.output
Terminals unused in grammar

   DO
   QUOTE
   DOUBLE_QUOTES
   BEGIN_COMMENT
   END_COMMENT


Grammar

    0 $accept: project $end

    1 project: cmmnt program

    2 program: procedures main

    3 cmmnt: COMMENT cmmnt
    4      | %empty

    5 main: PROCEDUR MAIN OPENPAREN CLOSEPAREN cmmnt OPENBRACE pro_body CLOSEBRACE

    6 procedures: procedures procedure
    7           | %empty

    8 procedure: FUNCTION IDENTIFIER OPENPAREN para_pro CLOSEPAREN cmmnt RETURN type_pro OPENBRACE pro_body CLOSEBRACE
    9          | PROCEDUR IDENTIFIER OPENPAREN para_pro CLOSEPAREN OPENBRACE pro_body CLOSEBRACE

   10 para_pro: para_list
   11         | %empty

   12 para_list: var_id COLON type_id
   13          | para_list SEMICOLON cmmnt para_list

   14 pro_body: cmmnt procedures declares stmnts

   15 declares: declares declear
   16         | %empty

   17 declear: VARIABLE var_id COLON type_id cmmnt SEMICOLON cmmnt

   18 var_id: IDENTIFIER COMMA var_id
   19       | IDENTIFIER

   20 type_id: BOOL
   21        | STRING OPENBRACKET DECIMAL_LTL CLOSEBRACKET
   22        | CHAR
   23        | INT
   24        | REAL
   25        | INTPTR
   26        | CHARPTR
   27        | REALPTR

   28 type_pro: BOOL
   29         | STRING
   30         | CHAR
   31         | INT
   32         | REAL
   33         | INTPTR
   34         | CHARPTR
   35         | REALPTR

   36 stmnts: stmnts stmnt
   37       | %empty

   38 stmnt_block: stmnt
   39            | declear
   40            | procedure
   41            | SEMICOLON

   42 new_block: OPENBRACE procedures cmmnt declares stmnts CLOSEBRACE cmmnt

   43 stmnt: IF OPENPAREN expr CLOSEPAREN stmnt_block
   44      | IF OPENPAREN expr CLOSEPAREN stmnt_block ELSE stmnt_block
   45      | WHILE cmmnt OPENPAREN expr CLOSEPAREN stmnt_block
   46      | FOR cmmnt OPENPAREN assmnt_stmnt SEMICOLON expr SEMICOLON assmnt_stmnt CLOSEPAREN stmnt_block
   47      | assmnt_stmnt SEMICOLON cmmnt
   48      | expr SEMICOLON cmmnt
   49      | RETURN expr SEMICOLON cmmnt
   50      | new_block

   51 assmnt_stmnt: lhs ASSINGMENT expr

   52 lhs: IDENTIFIER OPENBRACKET expr CLOSEBRACKET
   53    | IDENTIFIER
   54    | address_expr
   55    | DEREFERENCE_expr

   56 expr: OPENPAREN expr CLOSEPAREN
   57     | expr EQL expr
   58     | expr NOTEQL expr
   59     | expr GREATEREQL expr
   60     | expr GREATER expr
   61     | expr LESSEQL expr
   62     | expr LESS expr
   63     | expr AND expr
   64     | expr OR expr
   65     | expr PLUS expr
   66     | expr MINUS expr
   67     | expr MULTI expr
   68     | expr DIVISION expr
   69     | NOT expr
   70     | address_expr
   71     | DEREFERENCE_expr
   72     | call_func cmmnt
   73     | DECIMAL_LTL
   74     | HEX_LTL
   75     | CHAR_LTL
   76     | REAL_LTL
   77     | STRING_LTL
   78     | BOOLFALSE
   79     | BOOLTRUE
   80     | LENGTH IDENTIFIER LENGTH
   81     | IDENTIFIER OPENBRACKET expr CLOSEBRACKET
   82     | IDENTIFIER
   83     | CSNULL

   84 address_expr: ADDRESS IDENTIFIER
   85             | ADDRESS OPENPAREN IDENTIFIER CLOSEPAREN
   86             | ADDRESS IDENTIFIER OPENBRACKET expr CLOSEBRACKET
   87             | ADDRESS OPENPAREN IDENTIFIER OPENBRACKET expr CLOSEBRACKET CLOSEPAREN

   88 DEREFERENCE_expr: DEREFERENCE IDENTIFIER
   89                 | DEREFERENCE OPENPAREN expr CLOSEPAREN
   90                 | DEREFERENCE IDENTIFIER OPENBRACKET expr CLOSEBRACKET

   91 expr_list: expr COMMA expr_list
   92          | expr
   93          | %empty

   94 paren_expr: OPENPAREN expr_list CLOSEPAREN

   95 call_func: IDENTIFIER paren_expr


Terminals, with rules where they appear

$end (0) 0
error (256)
COMMENT (258) 3
DO (259)
WHILE (260) 45
IF (261) 43 44
ELSE (262) 44
FOR (263) 46
RETURN (264) 8 49
BOOL (265) 20 28
STRING (266) 21 29
CHARPTR (267) 26 34
CHAR (268) 22 30
INT (269) 23 31
INTPTR (270) 25 33
PROCEDUR (271) 5 9
AND (272) 63
ADDRESS (273) 84 85 86 87
EQL (274) 57
ASSINGMENT (275) 51
OR (276) 64
LENGTH (277) 80
GREATEREQL (278) 59
GREATER (279) 60
LESSEQL (280) 61
LESS (281) 62
NOTEQL (282) 58
NOT (283) 69
DIVISION (284) 68
PLUS (285) 65
MINUS (286) 66
MULTI (287) 67
VARIABLE (288) 17
STRING_LTL (289) 77
REAL_LTL (290) 76
CHAR_LTL (291) 75
CSNULL (292) 83
MAIN (293) 5
IDENTIFIER (294) 8 9 18 19 52 53 80 81 82 84 85 86 87 88 90 95
SEMICOLON (295) 13 17 41 46 47 48 49
COMMA (296) 18 91
OPENPAREN (297) 5 8 9 43 44 45 46 56 85 87 89 94
CLOSEPAREN (298) 5 8 9 43 44 45 46 56 85 87 89 94
OPENBRACKET (299) 21 52 81 86 87 90
CLOSEBRACKET (300) 21 52 81 86 87 90
OPENBRACE (301) 5 8 9 42
CLOSEBRACE (302) 5 8 9 42
DECIMAL_LTL (303) 21 73
HEX_LTL (304) 74
BOOLTRUE (305) 79
BOOLFALSE (306) 78
REAL (307) 24 32
REALPTR (308) 27 35
FUNCTION (309) 8
COLON (310) 12 17
DEREFERENCE (311) 88 89 90
QUOTE (312)
DOUBLE_QUOTES (313)
BEGIN_COMMENT (314)
END_COMMENT (315)


Nonterminals, with rules where they appear

$accept (61)
    on left: 0
project (62)
    on left: 1, on right: 0
program (63)
    on left: 2, on right: 1
cmmnt (64)
    on left: 3 4, on right: 1 3 5 8 13 14 17 42 45 46 47 48 49 72
main (65)
    on left: 5, on right: 2
procedures (66)
    on left: 6 7, on right: 2 6 14 42
procedure (67)
    on left: 8 9, on right: 6 40
para_pro (68)
    on left: 10 11, on right: 8 9
para_list (69)
    on left: 12 13, on right: 10 13
pro_body (70)
    on left: 14, on right: 5 8 9
declares (71)
    on left: 15 16, on right: 14 15 42
declear (72)
    on left: 17, on right: 15 39
var_id (73)
    on left: 18 19, on right: 12 17 18
type_id (74)
    on left: 20 21 22 23 24 25 26 27, on right: 12 17
type_pro (75)
    on left: 28 29 30 31 32 33 34 35, on right: 8
stmnts (76)
    on left: 36 37, on right: 14 36 42
stmnt_block (77)
    on left: 38 39 40 41, on right: 43 44 45 46
new_block (78)
    on left: 42, on right: 50
stmnt (79)
    on left: 43 44 45 46 47 48 49 50, on right: 36 38
assmnt_stmnt (80)
    on left: 51, on right: 46 47
lhs (81)
    on left: 52 53 54 55, on right: 51
expr (82)
    on left: 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73
    74 75 76 77 78 79 80 81 82 83, on right: 43 44 45 46 48 49 51 52
    56 57 58 59 60 61 62 63 64 65 66 67 68 69 81 86 87 89 90 91 92
address_expr (83)
    on left: 84 85 86 87, on right: 54 70
DEREFERENCE_expr (84)
    on left: 88 89 90, on right: 55 71
expr_list (85)
    on left: 91 92 93, on right: 91 94
paren_expr (86)
    on left: 94, on right: 95
call_func (87)
    on left: 95, on right: 72


State 0

    0 $accept: . project $end

    COMMENT  shift, and go to state 1

    $default  reduce using rule 4 (cmmnt)

    project  go to state 2
    cmmnt    go to state 3


State 1

    3 cmmnt: COMMENT . cmmnt

    COMMENT  shift, and go to state 1

    $default  reduce using rule 4 (cmmnt)

    cmmnt  go to state 4


State 2

    0 $accept: project . $end

    $end  shift, and go to state 5


State 3

    1 project: cmmnt . program

    $default  reduce using rule 7 (procedures)

    program     go to state 6
    procedures  go to state 7


State 4

    3 cmmnt: COMMENT cmmnt .

    $default  reduce using rule 3 (cmmnt)


State 5

    0 $accept: project $end .

    $default  accept


State 6

    1 project: cmmnt program .

    $default  reduce using rule 1 (project)


State 7

    2 program: procedures . main
    6 procedures: procedures . procedure

    PROCEDUR  shift, and go to state 8
    FUNCTION  shift, and go to state 9

    main       go to state 10
    procedure  go to state 11


State 8

    5 main: PROCEDUR . MAIN OPENPAREN CLOSEPAREN cmmnt OPENBRACE pro_body CLOSEBRACE
    9 procedure: PROCEDUR . IDENTIFIER OPENPAREN para_pro CLOSEPAREN OPENBRACE pro_body CLOSEBRACE

    MAIN        shift, and go to state 12
    IDENTIFIER  shift, and go to state 13


State 9

    8 procedure: FUNCTION . IDENTIFIER OPENPAREN para_pro CLOSEPAREN cmmnt RETURN type_pro OPENBRACE pro_body CLOSEBRACE

    IDENTIFIER  shift, and go to state 14


State 10

    2 program: procedures main .

    $default  reduce using rule 2 (program)


State 11

    6 procedures: procedures procedure .

    $default  reduce using rule 6 (procedures)


State 12

    5 main: PROCEDUR MAIN . OPENPAREN CLOSEPAREN cmmnt OPENBRACE pro_body CLOSEBRACE

    OPENPAREN  shift, and go to state 15


State 13

    9 procedure: PROCEDUR IDENTIFIER . OPENPAREN para_pro CLOSEPAREN OPENBRACE pro_body CLOSEBRACE

    OPENPAREN  shift, and go to state 16


State 14

    8 procedure: FUNCTION IDENTIFIER . OPENPAREN para_pro CLOSEPAREN cmmnt RETURN type_pro OPENBRACE pro_body CLOSEBRACE

    OPENPAREN  shift, and go to state 17


State 15

    5 main: PROCEDUR MAIN OPENPAREN . CLOSEPAREN cmmnt OPENBRACE pro_body CLOSEBRACE

    CLOSEPAREN  shift, and go to state 18


State 16

    9 procedure: PROCEDUR IDENTIFIER OPENPAREN . para_pro CLOSEPAREN OPENBRACE pro_body CLOSEBRACE

    IDENTIFIER  shift, and go to state 19

    $default  reduce using rule 11 (para_pro)

    para_pro   go to state 20
    para_list  go to state 21
    var_id     go to state 22


State 17

    8 procedure: FUNCTION IDENTIFIER OPENPAREN . para_pro CLOSEPAREN cmmnt RETURN type_pro OPENBRACE pro_body CLOSEBRACE

    IDENTIFIER  shift, and go to state 19

    $default  reduce using rule 11 (para_pro)

    para_pro   go to state 23
    para_list  go to state 21
    var_id     go to state 22


State 18

    5 main: PROCEDUR MAIN OPENPAREN CLOSEPAREN . cmmnt OPENBRACE pro_body CLOSEBRACE

    COMMENT  shift, and go to state 1

    $default  reduce using rule 4 (cmmnt)

    cmmnt  go to state 24


State 19

   18 var_id: IDENTIFIER . COMMA var_id
   19       | IDENTIFIER .

    COMMA  shift, and go to state 25

    $default  reduce using rule 19 (var_id)


State 20

    9 procedure: PROCEDUR IDENTIFIER OPENPAREN para_pro . CLOSEPAREN OPENBRACE pro_body CLOSEBRACE

    CLOSEPAREN  shift, and go to state 26


State 21

   10 para_pro: para_list .
   13 para_list: para_list . SEMICOLON cmmnt para_list

    SEMICOLON  shift, and go to state 27

    $default  reduce using rule 10 (para_pro)


State 22

   12 para_list: var_id . COLON type_id

    COLON  shift, and go to state 28


State 23

    8 procedure: FUNCTION IDENTIFIER OPENPAREN para_pro . CLOSEPAREN cmmnt RETURN type_pro OPENBRACE pro_body CLOSEBRACE

    CLOSEPAREN  shift, and go to state 29


State 24

    5 main: PROCEDUR MAIN OPENPAREN CLOSEPAREN cmmnt . OPENBRACE pro_body CLOSEBRACE

    OPENBRACE  shift, and go to state 30


State 25

   18 var_id: IDENTIFIER COMMA . var_id

    IDENTIFIER  shift, and go to state 19

    var_id  go to state 31


State 26

    9 procedure: PROCEDUR IDENTIFIER OPENPAREN para_pro CLOSEPAREN . OPENBRACE pro_body CLOSEBRACE

    OPENBRACE  shift, and go to state 32


State 27

   13 para_list: para_list SEMICOLON . cmmnt para_list

    COMMENT  shift, and go to state 1

    $default  reduce using rule 4 (cmmnt)

    cmmnt  go to state 33


State 28

   12 para_list: var_id COLON . type_id

    BOOL     shift, and go to state 34
    STRING   shift, and go to state 35
    CHARPTR  shift, and go to state 36
    CHAR     shift, and go to state 37
    INT      shift, and go to state 38
    INTPTR   shift, and go to state 39
    REAL     shift, and go to state 40
    REALPTR  shift, and go to state 41

    type_id  go to state 42


State 29

    8 procedure: FUNCTION IDENTIFIER OPENPAREN para_pro CLOSEPAREN . cmmnt RETURN type_pro OPENBRACE pro_body CLOSEBRACE

    COMMENT  shift, and go to state 1

    $default  reduce using rule 4 (cmmnt)

    cmmnt  go to state 43


State 30

    5 main: PROCEDUR MAIN OPENPAREN CLOSEPAREN cmmnt OPENBRACE . pro_body CLOSEBRACE

    COMMENT  shift, and go to state 1

    $default  reduce using rule 4 (cmmnt)

    cmmnt     go to state 44
    pro_body  go to state 45


State 31

   18 var_id: IDENTIFIER COMMA var_id .

    $default  reduce using rule 18 (var_id)


State 32

    9 procedure: PROCEDUR IDENTIFIER OPENPAREN para_pro CLOSEPAREN OPENBRACE . pro_body CLOSEBRACE

    COMMENT  shift, and go to state 1

    $default  reduce using rule 4 (cmmnt)

    cmmnt     go to state 44
    pro_body  go to state 46


State 33

   13 para_list: para_list SEMICOLON cmmnt . para_list

    IDENTIFIER  shift, and go to state 19

    para_list  go to state 47
    var_id     go to state 22


State 34

   20 type_id: BOOL .

    $default  reduce using rule 20 (type_id)


State 35

   21 type_id: STRING . OPENBRACKET DECIMAL_LTL CLOSEBRACKET

    OPENBRACKET  shift, and go to state 48


State 36

   26 type_id: CHARPTR .

    $default  reduce using rule 26 (type_id)


State 37

   22 type_id: CHAR .

    $default  reduce using rule 22 (type_id)


State 38

   23 type_id: INT .

    $default  reduce using rule 23 (type_id)


State 39

   25 type_id: INTPTR .

    $default  reduce using rule 25 (type_id)


State 40

   24 type_id: REAL .

    $default  reduce using rule 24 (type_id)


State 41

   27 type_id: REALPTR .

    $default  reduce using rule 27 (type_id)


State 42

   12 para_list: var_id COLON type_id .

    $default  reduce using rule 12 (para_list)


State 43

    8 procedure: FUNCTION IDENTIFIER OPENPAREN para_pro CLOSEPAREN cmmnt . RETURN type_pro OPENBRACE pro_body CLOSEBRACE

    RETURN  shift, and go to state 49


State 44

   14 pro_body: cmmnt . procedures declares stmnts

    $default  reduce using rule 7 (procedures)

    procedures  go to state 50


State 45

    5 main: PROCEDUR MAIN OPENPAREN CLOSEPAREN cmmnt OPENBRACE pro_body . CLOSEBRACE

    CLOSEBRACE  shift, and go to state 51


State 46

    9 procedure: PROCEDUR IDENTIFIER OPENPAREN para_pro CLOSEPAREN OPENBRACE pro_body . CLOSEBRACE

    CLOSEBRACE  shift, and go to state 52


State 47

   13 para_list: para_list . SEMICOLON cmmnt para_list
   13          | para_list SEMICOLON cmmnt para_list .

    $default  reduce using rule 13 (para_list)


State 48

   21 type_id: STRING OPENBRACKET . DECIMAL_LTL CLOSEBRACKET

    DECIMAL_LTL  shift, and go to state 53


State 49

    8 procedure: FUNCTION IDENTIFIER OPENPAREN para_pro CLOSEPAREN cmmnt RETURN . type_pro OPENBRACE pro_body CLOSEBRACE

    BOOL     shift, and go to state 54
    STRING   shift, and go to state 55
    CHARPTR  shift, and go to state 56
    CHAR     shift, and go to state 57
    INT      shift, and go to state 58
    INTPTR   shift, and go to state 59
    REAL     shift, and go to state 60
    REALPTR  shift, and go to state 61

    type_pro  go to state 62


State 50

    6 procedures: procedures . procedure
   14 pro_body: cmmnt procedures . declares stmnts

    PROCEDUR  shift, and go to state 63
    FUNCTION  shift, and go to state 9

    $default  reduce using rule 16 (declares)

    procedure  go to state 11
    declares   go to state 64


State 51

    5 main: PROCEDUR MAIN OPENPAREN CLOSEPAREN cmmnt OPENBRACE pro_body CLOSEBRACE .

    $default  reduce using rule 5 (main)


State 52

    9 procedure: PROCEDUR IDENTIFIER OPENPAREN para_pro CLOSEPAREN OPENBRACE pro_body CLOSEBRACE .

    $default  reduce using rule 9 (procedure)


State 53

   21 type_id: STRING OPENBRACKET DECIMAL_LTL . CLOSEBRACKET

    CLOSEBRACKET  shift, and go to state 65


State 54

   28 type_pro: BOOL .

    $default  reduce using rule 28 (type_pro)


State 55

   29 type_pro: STRING .

    $default  reduce using rule 29 (type_pro)


State 56

   34 type_pro: CHARPTR .

    $default  reduce using rule 34 (type_pro)


State 57

   30 type_pro: CHAR .

    $default  reduce using rule 30 (type_pro)


State 58

   31 type_pro: INT .

    $default  reduce using rule 31 (type_pro)


State 59

   33 type_pro: INTPTR .

    $default  reduce using rule 33 (type_pro)


State 60

   32 type_pro: REAL .

    $default  reduce using rule 32 (type_pro)


State 61

   35 type_pro: REALPTR .

    $default  reduce using rule 35 (type_pro)


State 62

    8 procedure: FUNCTION IDENTIFIER OPENPAREN para_pro CLOSEPAREN cmmnt RETURN type_pro . OPENBRACE pro_body CLOSEBRACE

    OPENBRACE  shift, and go to state 66


State 63

    9 procedure: PROCEDUR . IDENTIFIER OPENPAREN para_pro CLOSEPAREN OPENBRACE pro_body CLOSEBRACE

    IDENTIFIER  shift, and go to state 13


State 64

   14 pro_body: cmmnt procedures declares . stmnts
   15 declares: declares . declear

    VARIABLE  shift, and go to state 67

    $default  reduce using rule 37 (stmnts)

    declear  go to state 68
    stmnts   go to state 69


State 65

   21 type_id: STRING OPENBRACKET DECIMAL_LTL CLOSEBRACKET .

    $default  reduce using rule 21 (type_id)


State 66

    8 procedure: FUNCTION IDENTIFIER OPENPAREN para_pro CLOSEPAREN cmmnt RETURN type_pro OPENBRACE . pro_body CLOSEBRACE

    COMMENT  shift, and go to state 1

    $default  reduce using rule 4 (cmmnt)

    cmmnt     go to state 44
    pro_body  go to state 70


State 67

   17 declear: VARIABLE . var_id COLON type_id cmmnt SEMICOLON cmmnt

    IDENTIFIER  shift, and go to state 19

    var_id  go to state 71


State 68

   15 declares: declares declear .

    $default  reduce using rule 15 (declares)


State 69

   14 pro_body: cmmnt procedures declares stmnts .
   36 stmnts: stmnts . stmnt

    WHILE        shift, and go to state 72
    IF           shift, and go to state 73
    FOR          shift, and go to state 74
    RETURN       shift, and go to state 75
    ADDRESS      shift, and go to state 76
    LENGTH       shift, and go to state 77
    NOT          shift, and go to state 78
    STRING_LTL   shift, and go to state 79
    REAL_LTL     shift, and go to state 80
    CHAR_LTL     shift, and go to state 81
    CSNULL       shift, and go to state 82
    IDENTIFIER   shift, and go to state 83
    OPENPAREN    shift, and go to state 84
    OPENBRACE    shift, and go to state 85
    DECIMAL_LTL  shift, and go to state 86
    HEX_LTL      shift, and go to state 87
    BOOLTRUE     shift, and go to state 88
    BOOLFALSE    shift, and go to state 89
    DEREFERENCE  shift, and go to state 90

    $default  reduce using rule 14 (pro_body)

    new_block         go to state 91
    stmnt             go to state 92
    assmnt_stmnt      go to state 93
    lhs               go to state 94
    expr              go to state 95
    address_expr      go to state 96
    DEREFERENCE_expr  go to state 97
    call_func         go to state 98


State 70

    8 procedure: FUNCTION IDENTIFIER OPENPAREN para_pro CLOSEPAREN cmmnt RETURN type_pro OPENBRACE pro_body . CLOSEBRACE

    CLOSEBRACE  shift, and go to state 99


State 71

   17 declear: VARIABLE var_id . COLON type_id cmmnt SEMICOLON cmmnt

    COLON  shift, and go to state 100


State 72

   45 stmnt: WHILE . cmmnt OPENPAREN expr CLOSEPAREN stmnt_block

    COMMENT  shift, and go to state 1

    $default  reduce using rule 4 (cmmnt)

    cmmnt  go to state 101


State 73

   43 stmnt: IF . OPENPAREN expr CLOSEPAREN stmnt_block
   44      | IF . OPENPAREN expr CLOSEPAREN stmnt_block ELSE stmnt_block

    OPENPAREN  shift, and go to state 102


State 74

   46 stmnt: FOR . cmmnt OPENPAREN assmnt_stmnt SEMICOLON expr SEMICOLON assmnt_stmnt CLOSEPAREN stmnt_block

    COMMENT  shift, and go to state 1

    $default  reduce using rule 4 (cmmnt)

    cmmnt  go to state 103


State 75

   49 stmnt: RETURN . expr SEMICOLON cmmnt

    ADDRESS      shift, and go to state 76
    LENGTH       shift, and go to state 77
    NOT          shift, and go to state 78
    STRING_LTL   shift, and go to state 79
    REAL_LTL     shift, and go to state 80
    CHAR_LTL     shift, and go to state 81
    CSNULL       shift, and go to state 82
    IDENTIFIER   shift, and go to state 104
    OPENPAREN    shift, and go to state 84
    DECIMAL_LTL  shift, and go to state 86
    HEX_LTL      shift, and go to state 87
    BOOLTRUE     shift, and go to state 88
    BOOLFALSE    shift, and go to state 89
    DEREFERENCE  shift, and go to state 90

    expr              go to state 105
    address_expr      go to state 106
    DEREFERENCE_expr  go to state 107
    call_func         go to state 98


State 76

   84 address_expr: ADDRESS . IDENTIFIER
   85             | ADDRESS . OPENPAREN IDENTIFIER CLOSEPAREN
   86             | ADDRESS . IDENTIFIER OPENBRACKET expr CLOSEBRACKET
   87             | ADDRESS . OPENPAREN IDENTIFIER OPENBRACKET expr CLOSEBRACKET CLOSEPAREN

    IDENTIFIER  shift, and go to state 108
    OPENPAREN   shift, and go to state 109


State 77

   80 expr: LENGTH . IDENTIFIER LENGTH

    IDENTIFIER  shift, and go to state 110


State 78

   69 expr: NOT . expr

    ADDRESS      shift, and go to state 76
    LENGTH       shift, and go to state 77
    NOT          shift, and go to state 78
    STRING_LTL   shift, and go to state 79
    REAL_LTL     shift, and go to state 80
    CHAR_LTL     shift, and go to state 81
    CSNULL       shift, and go to state 82
    IDENTIFIER   shift, and go to state 104
    OPENPAREN    shift, and go to state 84
    DECIMAL_LTL  shift, and go to state 86
    HEX_LTL      shift, and go to state 87
    BOOLTRUE     shift, and go to state 88
    BOOLFALSE    shift, and go to state 89
    DEREFERENCE  shift, and go to state 90

    expr              go to state 111
    address_expr      go to state 106
    DEREFERENCE_expr  go to state 107
    call_func         go to state 98


State 79

   77 expr: STRING_LTL .

    $default  reduce using rule 77 (expr)


State 80

   76 expr: REAL_LTL .

    $default  reduce using rule 76 (expr)


State 81

   75 expr: CHAR_LTL .

    $default  reduce using rule 75 (expr)


State 82

   83 expr: CSNULL .

    $default  reduce using rule 83 (expr)


State 83

   52 lhs: IDENTIFIER . OPENBRACKET expr CLOSEBRACKET
   53    | IDENTIFIER .
   81 expr: IDENTIFIER . OPENBRACKET expr CLOSEBRACKET
   82     | IDENTIFIER .
   95 call_func: IDENTIFIER . paren_expr

    OPENPAREN    shift, and go to state 112
    OPENBRACKET  shift, and go to state 113

    ASSINGMENT  reduce using rule 53 (lhs)
    $default    reduce using rule 82 (expr)

    paren_expr  go to state 114


State 84

   56 expr: OPENPAREN . expr CLOSEPAREN

    ADDRESS      shift, and go to state 76
    LENGTH       shift, and go to state 77
    NOT          shift, and go to state 78
    STRING_LTL   shift, and go to state 79
    REAL_LTL     shift, and go to state 80
    CHAR_LTL     shift, and go to state 81
    CSNULL       shift, and go to state 82
    IDENTIFIER   shift, and go to state 104
    OPENPAREN    shift, and go to state 84
    DECIMAL_LTL  shift, and go to state 86
    HEX_LTL      shift, and go to state 87
    BOOLTRUE     shift, and go to state 88
    BOOLFALSE    shift, and go to state 89
    DEREFERENCE  shift, and go to state 90

    expr              go to state 115
    address_expr      go to state 106
    DEREFERENCE_expr  go to state 107
    call_func         go to state 98


State 85

   42 new_block: OPENBRACE . procedures cmmnt declares stmnts CLOSEBRACE cmmnt

    $default  reduce using rule 7 (procedures)

    procedures  go to state 116


State 86

   73 expr: DECIMAL_LTL .

    $default  reduce using rule 73 (expr)


State 87

   74 expr: HEX_LTL .

    $default  reduce using rule 74 (expr)


State 88

   79 expr: BOOLTRUE .

    $default  reduce using rule 79 (expr)


State 89

   78 expr: BOOLFALSE .

    $default  reduce using rule 78 (expr)


State 90

   88 DEREFERENCE_expr: DEREFERENCE . IDENTIFIER
   89                 | DEREFERENCE . OPENPAREN expr CLOSEPAREN
   90                 | DEREFERENCE . IDENTIFIER OPENBRACKET expr CLOSEBRACKET

    IDENTIFIER  shift, and go to state 117
    OPENPAREN   shift, and go to state 118


State 91

   50 stmnt: new_block .

    $default  reduce using rule 50 (stmnt)


State 92

   36 stmnts: stmnts stmnt .

    $default  reduce using rule 36 (stmnts)


State 93

   47 stmnt: assmnt_stmnt . SEMICOLON cmmnt

    SEMICOLON  shift, and go to state 119


State 94

   51 assmnt_stmnt: lhs . ASSINGMENT expr

    ASSINGMENT  shift, and go to state 120


State 95

   48 stmnt: expr . SEMICOLON cmmnt
   57 expr: expr . EQL expr
   58     | expr . NOTEQL expr
   59     | expr . GREATEREQL expr
   60     | expr . GREATER expr
   61     | expr . LESSEQL expr
   62     | expr . LESS expr
   63     | expr . AND expr
   64     | expr . OR expr
   65     | expr . PLUS expr
   66     | expr . MINUS expr
   67     | expr . MULTI expr
   68     | expr . DIVISION expr

    AND         shift, and go to state 121
    EQL         shift, and go to state 122
    OR          shift, and go to state 123
    GREATEREQL  shift, and go to state 124
    GREATER     shift, and go to state 125
    LESSEQL     shift, and go to state 126
    LESS        shift, and go to state 127
    NOTEQL      shift, and go to state 128
    DIVISION    shift, and go to state 129
    PLUS        shift, and go to state 130
    MINUS       shift, and go to state 131
    MULTI       shift, and go to state 132
    SEMICOLON   shift, and go to state 133


State 96

   54 lhs: address_expr .
   70 expr: address_expr .

    ASSINGMENT  reduce using rule 54 (lhs)
    $default    reduce using rule 70 (expr)


State 97

   55 lhs: DEREFERENCE_expr .
   71 expr: DEREFERENCE_expr .

    ASSINGMENT  reduce using rule 55 (lhs)
    $default    reduce using rule 71 (expr)


State 98

   72 expr: call_func . cmmnt

    COMMENT  shift, and go to state 1

    $default  reduce using rule 4 (cmmnt)

    cmmnt  go to state 134


State 99

    8 procedure: FUNCTION IDENTIFIER OPENPAREN para_pro CLOSEPAREN cmmnt RETURN type_pro OPENBRACE pro_body CLOSEBRACE .

    $default  reduce using rule 8 (procedure)


State 100

   17 declear: VARIABLE var_id COLON . type_id cmmnt SEMICOLON cmmnt

    BOOL     shift, and go to state 34
    STRING   shift, and go to state 35
    CHARPTR  shift, and go to state 36
    CHAR     shift, and go to state 37
    INT      shift, and go to state 38
    INTPTR   shift, and go to state 39
    REAL     shift, and go to state 40
    REALPTR  shift, and go to state 41

    type_id  go to state 135


State 101

   45 stmnt: WHILE cmmnt . OPENPAREN expr CLOSEPAREN stmnt_block

    OPENPAREN  shift, and go to state 136


State 102

   43 stmnt: IF OPENPAREN . expr CLOSEPAREN stmnt_block
   44      | IF OPENPAREN . expr CLOSEPAREN stmnt_block ELSE stmnt_block

    ADDRESS      shift, and go to state 76
    LENGTH       shift, and go to state 77
    NOT          shift, and go to state 78
    STRING_LTL   shift, and go to state 79
    REAL_LTL     shift, and go to state 80
    CHAR_LTL     shift, and go to state 81
    CSNULL       shift, and go to state 82
    IDENTIFIER   shift, and go to state 104
    OPENPAREN    shift, and go to state 84
    DECIMAL_LTL  shift, and go to state 86
    HEX_LTL      shift, and go to state 87
    BOOLTRUE     shift, and go to state 88
    BOOLFALSE    shift, and go to state 89
    DEREFERENCE  shift, and go to state 90

    expr              go to state 137
    address_expr      go to state 106
    DEREFERENCE_expr  go to state 107
    call_func         go to state 98


State 103

   46 stmnt: FOR cmmnt . OPENPAREN assmnt_stmnt SEMICOLON expr SEMICOLON assmnt_stmnt CLOSEPAREN stmnt_block

    OPENPAREN  shift, and go to state 138


State 104

   81 expr: IDENTIFIER . OPENBRACKET expr CLOSEBRACKET
   82     | IDENTIFIER .
   95 call_func: IDENTIFIER . paren_expr

    OPENPAREN    shift, and go to state 112
    OPENBRACKET  shift, and go to state 139

    $default  reduce using rule 82 (expr)

    paren_expr  go to state 114


State 105

   49 stmnt: RETURN expr . SEMICOLON cmmnt
   57 expr: expr . EQL expr
   58     | expr . NOTEQL expr
   59     | expr . GREATEREQL expr
   60     | expr . GREATER expr
   61     | expr . LESSEQL expr
   62     | expr . LESS expr
   63     | expr . AND expr
   64     | expr . OR expr
   65     | expr . PLUS expr
   66     | expr . MINUS expr
   67     | expr . MULTI expr
   68     | expr . DIVISION expr

    AND         shift, and go to state 121
    EQL         shift, and go to state 122
    OR          shift, and go to state 123
    GREATEREQL  shift, and go to state 124
    GREATER     shift, and go to state 125
    LESSEQL     shift, and go to state 126
    LESS        shift, and go to state 127
    NOTEQL      shift, and go to state 128
    DIVISION    shift, and go to state 129
    PLUS        shift, and go to state 130
    MINUS       shift, and go to state 131
    MULTI       shift, and go to state 132
    SEMICOLON   shift, and go to state 140


State 106

   70 expr: address_expr .

    $default  reduce using rule 70 (expr)


State 107

   71 expr: DEREFERENCE_expr .

    $default  reduce using rule 71 (expr)


State 108

   84 address_expr: ADDRESS IDENTIFIER .
   86             | ADDRESS IDENTIFIER . OPENBRACKET expr CLOSEBRACKET

    OPENBRACKET  shift, and go to state 141

    $default  reduce using rule 84 (address_expr)


State 109

   85 address_expr: ADDRESS OPENPAREN . IDENTIFIER CLOSEPAREN
   87             | ADDRESS OPENPAREN . IDENTIFIER OPENBRACKET expr CLOSEBRACKET CLOSEPAREN

    IDENTIFIER  shift, and go to state 142


State 110

   80 expr: LENGTH IDENTIFIER . LENGTH

    LENGTH  shift, and go to state 143


State 111

   57 expr: expr . EQL expr
   58     | expr . NOTEQL expr
   59     | expr . GREATEREQL expr
   60     | expr . GREATER expr
   61     | expr . LESSEQL expr
   62     | expr . LESS expr
   63     | expr . AND expr
   64     | expr . OR expr
   65     | expr . PLUS expr
   66     | expr . MINUS expr
   67     | expr . MULTI expr
   68     | expr . DIVISION expr
   69     | NOT expr .

    $default  reduce using rule 69 (expr)


State 112

   94 paren_expr: OPENPAREN . expr_list CLOSEPAREN
